       only "start" or "end" date, not both. (Stefan)
- BUG: Issue #435: child items not shown when
       adding an ignored folder. (Stefan)
- BUG: Issue #437: wrong error message shown
       in repo browser. (Stefan)
- BUG: Issue #440: svn:needs-lock not recognized
       if it has an empty value. (Stefan)
- BUG: Issue #441: crash in commit dialog. (Stefan)

Version 1.7.10
- BUG: Issue #406: wrong image positioning. (Stefan)
- BUG: Issue #408: repeated authentication
       and crashes. (Stefan)
- BUG: Issue #409: language pack fails to install
       in silent mode. (Stefan)
- BUG: Issue #412: TMerge options affect
       other instances. (Stefan)
- BUG: Issue #413: wrong unescaped path
       in Log Dialog. (Stefan)
- BUG: Issue #414: Words with german umlauts not
       highlighted after log message search. (Stefan)
- BUG: Issue #415: Check-for-modifications dialog shows
       folders as files for sparse checkouts. (Stefan)
- BUG: Issue #418: Unexpected warning - Non-recursive
       commit of moved/renamed folders. (Stefan)
- BUG: Issue # 398: Copied files don't get reverted
       to recycle bin. (Stefan)
- BUG: Issue #421: Checkout dialog ignores OK button
       after directory warning. (Stefan)
- BUG: Issue #426: reverting a file destroys the sort
       order in the status list control. (Stefan)

Version 1.7.9
- BUG: Issue #394: crash when refreshing
       status list control. (Stefan)
- BUG: Issue #396: crashes in various commands if the
       config file is invalid. (Stefan)
- BUG: Issue #398: Copied files don't get reverted
       to recycle bin. (Stefan)
- BUG: Issue #399: Selecting an url from the
       repbrowser clears the url. (Stefan)
- BUG: Issue #400: repo browser crash when
       refreshing. (Stefan)
- BUG: Issue #401: Exception shown when blame is
       called for an url. (Stefan)
- BUG: Issue #402: various crashes in
       other applications. (Stefan)
- BUG: Issue 404: checkbox width calculated wrong